tup/parse/testdata/error/review/assignments.tup
# missing right-hand side
answer =

/home/user/tuppence/tup/parse/testdata/error/input/assignments.tup:1:9: error: expecting "expression", got ""

# unclosed labeled destructuring
(name, age = (name: "Brent", age: 42)

/home/user/tuppence/tup/parse/testdata/error/input/assignments.tup:1:12: error: expecting ")", got "="

# missing expression after mut
coords = mut

/home/user/tuppence/tup/parse/testdata/error/input/assignments.tup:1:13: error: expecting "expression", got ""
